--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,8 @@
 <title>Admin Dashboard • National ID System</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+
+<body class="admin-page">
 
 <div class="sidebar">
     <h2 class="side-title">Admin Panel</h2>
