--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <title>PSA • PhilSys Portal</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body class="centered auth-bg">
 
   <div class="auth-box">
@@ -20,7 +19,7 @@
       </div>
     </div>
 
-    <h1 class="title" style="font-size:12px;">Philippine Statistics Authority</h1>
+    <h1 class="title" style="font-size: 12px;">Philippine Statistics Authority</h1>
     <h1 class="title">National ID System</h1>
     <p class="subtitle">Secure Login • Powered by Google Sheets</p>
 
@@ -43,7 +42,6 @@
 
     <!-- REGISTER FORM -->
     <form id="registerForm" class="form" style="display:none;">
-
       <div class="form-row">
         <div>
           <label>First Name</label>
@@ -61,14 +59,15 @@
       <label>Email</label>
       <input type="email" id="regEmail" required>
 
-      <label>Viber Number</label>
+      <label for="regViber">Viber Number</label>
       <input
-  id="regViber"
-  type="text"
-  inputmode="numeric"
-  placeholder="09XXXXXXXXX"
-  required
-/>
+        id="regViber"
+        type="text"
+        inputmode="numeric"
+        placeholder="09XXXXXXXXX"
+        required
+      />
+
       <label>Position</label>
       <select id="regPosition" required>
         <option value="">-- Select Position --</option>
@@ -93,9 +92,26 @@
 
       <div id="adminNote" class="note bad">Admin role requires authorization.</div>
 
-      <button type="submit" class="btn-primary">Create Account</button>
+      <button type="submit" class="btn-primary" id="sendOtpBtn">Send OTP</button>
       <p id="regMsg" class="msg hidden"></p>
     </form>
+
+    <!-- OTP FORM (Hidden) -->
+    <div id="otpWrap" class="otp-wrap hidden">
+      <div class="note" style="text-align:center;">
+        We sent an OTP to: <b id="otpEmailText">your@email.com</b>
+      </div>
+
+      <label>Enter OTP (6 digits)</label>
+      <input type="text" id="otpCode" inputmode="numeric" maxlength="6" placeholder="123456">
+
+      <button type="button" class="btn-primary" id="verifyOtpBtn">Verify OTP</button>
+
+      <button type="button" class="btn-secondary" id="resendOtpBtn">Resend OTP</button>
+      <button type="button" class="btn-ghost" id="cancelOtpBtn">Cancel</button>
+
+      <p id="otpMsg" class="msg hidden"></p>
+    </div>
 
     <div class="auth-footer">
       © 2025 Philippine Statistics Authority • National ID System
@@ -105,7 +121,3 @@
   <script src="assets/js/auth.js"></script>
 </body>
 </html>
-
-
-
-
