--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,7 @@
     <div class="auth-footer">© 2025 Philippine Statistics Authority • National ID System</div>
   </div>
 
-  <script src="assets/js/auth.js?v=12" defer></script>
+  <!-- IMPORTANT: cache-bust para sure latest -->
+  <script src="assets/js/auth.js?v=99" defer></script>
 </body>
 </html>
