--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
 
   <div class="auth-box">
     <div class="logo-row">
-      <div class="logo-wrap"><img src="assets/images/psa.png" alt="PSA Logo"></div>
-      <div class="logo-wrap"><img src="assets/images/philsys.png" alt="PhilSys Logo"></div>
+      <div class="logo-wrap">
+        <img src="assets/images/psa.png" alt="PSA Logo">
+      </div>
+      <div class="logo-wrap">
+        <img src="assets/images/philsys.png" alt="PhilSys Logo">
+      </div>
     </div>
 
     <h1 class="title" style="font-size: 12px;">Philippine Statistics Authority</h1>
@@ -23,7 +27,7 @@
       <button id="registerTab" class="tab" type="button">Register</button>
     </div>
 
-    <!-- LOGIN -->
+    <!-- LOGIN FORM -->
     <form id="loginForm" class="form">
       <label>Email</label>
       <input type="email" id="loginEmail" placeholder="name@example.gov.ph" required>
@@ -35,7 +39,7 @@
       <p id="loginMsg" class="msg hidden"></p>
     </form>
 
-    <!-- REGISTER -->
+    <!-- REGISTER FORM -->
     <form id="registerForm" class="form" style="display:none;">
       <div class="form-row">
         <div>
@@ -55,7 +59,7 @@
       <input type="email" id="regEmail" required>
 
       <label for="regViber">Viber Number</label>
-      <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required/>
+      <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required />
 
       <label>Position</label>
       <select id="regPosition" required>
@@ -81,38 +85,15 @@
 
       <div id="adminNote" class="note bad">Admin role requires authorization.</div>
 
-      <button type="submit" class="btn-primary" id="sendOtpBtn">Create Account</button>
+      <button type="submit" class="btn-primary">Create Account</button>
       <p id="regMsg" class="msg hidden"></p>
     </form>
 
-    <!-- OTP SECTION -->
-    <div id="otpWrap" class="hidden" style="margin-top:14px;">
-      <p class="subtitle" style="margin:0 0 10px;">
-        Enter the OTP sent to <b id="otpEmailText"></b>
-      </p>
-
-      <label>OTP Code</label>
-      <input id="otpCode" type="text" inputmode="numeric" maxlength="6" placeholder="123456" />
-
-      <button id="verifyOtpBtn" class="btn-primary" type="button">Verify OTP</button>
-
-      <p id="otpMsg" class="msg hidden"></p>
-
-      <p class="subtitle" style="margin-top:10px;">
-        OTP expires in <b id="otpTimer">05:00</b>
-      </p>
-
-      <button id="resendOtpBtn" class="btn-secondary" type="button" disabled>
-        Resend OTP (<span id="resendCd">30</span>s)
-      </button>
-
-      <button id="cancelOtpBtn" class="btn-ghost" type="button">Cancel</button>
+    <div class="auth-footer">
+      © 2025 Philippine Statistics Authority • National ID System
     </div>
-
-    <div class="auth-footer">© 2025 Philippine Statistics Authority • National ID System</div>
   </div>
 
-  <!-- IMPORTANT: cache-bust para sure latest -->
-  <script src="assets/js/auth.js?v=99" defer></script>
+  <script src="assets/js/auth.js?v=1" defer></script>
 </body>
 </html>
