--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
       <button id="registerTab" class="tab" type="button">Register</button>
     </div>
 
-    <!-- LOGIN FORM -->
-    <form id="loginForm" class="form">
+    <!-- LOGIN FORM (NARROW) -->
+    <form id="loginForm" class="form login-pane">
       <label>Email</label>
       <input type="email" id="loginEmail" placeholder="name@example.gov.ph" required>
 
@@ -39,8 +39,8 @@
       <p id="loginMsg" class="msg hidden"></p>
     </form>
 
-    <!-- REGISTER FORM -->
-    <form id="registerForm" class="form" style="display:none;">
+    <!-- REGISTER FORM (WIDE / 2-COL) -->
+    <form id="registerForm" class="form register-pane" style="display:none;">
       <div class="reg-grid">
 
         <!-- LEFT COLUMN -->
