--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body class="centered auth-bg">
 
-  <div class="auth-box auth-box-wide">
+  <div class="auth-box">
+    <!-- Logos -->
     <div class="logo-row">
       <div class="logo-wrap">
         <img src="assets/images/psa.png" alt="PSA Logo">
@@ -18,17 +19,18 @@
       </div>
     </div>
 
-    <h1 class="title" style="font-size: 12px;">Philippine Statistics Authority</h1>
+    <h1 class="title" style="font-size:12px;">Philippine Statistics Authority</h1>
     <h1 class="title">National ID System</h1>
     <p class="subtitle">Secure Login • Powered by Google Sheets</p>
 
+    <!-- Tabs -->
     <div class="tabs">
       <button id="loginTab" class="tab active" type="button">Login</button>
       <button id="registerTab" class="tab" type="button">Register</button>
     </div>
 
-    <!-- LOGIN FORM (NARROW) -->
-    <form id="loginForm" class="form login-pane">
+    <!-- LOGIN -->
+    <form id="loginForm" class="form">
       <label>Email</label>
       <input type="email" id="loginEmail" placeholder="name@example.gov.ph" required>
 
@@ -39,87 +41,54 @@
       <p id="loginMsg" class="msg hidden"></p>
     </form>
 
-    <!-- REGISTER FORM (WIDE / 2-COL) -->
-    <form id="registerForm" class="form register-pane" style="display:none;">
-      <div class="reg-grid">
+    <!-- REGISTER -->
+    <form id="registerForm" class="form" style="display:none;">
+      <label>First Name</label>
+      <input type="text" id="regFirstName" required>
 
-        <!-- LEFT COLUMN -->
-        <div class="reg-col">
-          <div class="section-card">
-            <div class="section-head">
-              <div class="section-title">Personal Information</div>
-              <div class="section-sub">Enter your basic details</div>
-            </div>
+      <label>Middle Name</label>
+      <input type="text" id="regMiddleName" placeholder="Optional">
 
-            <div class="form-row">
-              <div>
-                <label>First Name</label>
-                <input type="text" id="regFirstName" required>
-              </div>
-              <div>
-                <label>Middle Name</label>
-                <input type="text" id="regMiddleName" placeholder="Optional">
-              </div>
-            </div>
+      <label>Last Name</label>
+      <input type="text" id="regLastName" required>
 
-            <label>Last Name</label>
-            <input type="text" id="regLastName" required>
+      <label>Email</label>
+      <input type="email" id="regEmail" required>
 
-            <label>Email</label>
-            <input type="email" id="regEmail" required>
+      <label>Viber Number</label>
+      <input
+        id="regViber"
+        type="text"
+        inputmode="numeric"
+        placeholder="09XXXXXXXXX"
+        required
+      >
+      <div class="hint">Format: 09XXXXXXXXX (11 digits)</div>
 
-            <label for="regViber">Viber Number</label>
-            <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required />
-            <div class="hint">Format: 09XXXXXXXXX (11 digits)</div>
-          </div>
-        </div>
+      <label>Position</label>
+      <select id="regPosition" required>
+        <option value="">-- Select Position --</option>
+      </select>
 
-        <!-- RIGHT COLUMN -->
-        <div class="reg-col">
-          <div class="section-card">
-            <div class="section-head">
-              <div class="section-title">Work Information</div>
-              <div class="section-sub">Select your office details</div>
-            </div>
+      <label>Province</label>
+      <select id="regProvince" required>
+        <option value="">-- Select Province --</option>
+      </select>
 
-            <label>Position</label>
-            <select id="regPosition" required>
-              <option value="">-- Select Position --</option>
-            </select>
+      <label>Password</label>
+      <input type="password" id="regPassword" required>
 
-            <label>Province</label>
-            <select id="regProvince" required>
-              <option value="">-- Select Province --</option>
-            </select>
-          </div>
+      <label>Confirm Password</label>
+      <input type="password" id="regConfirm" required>
 
-          <div class="section-card" style="margin-top:12px;">
-            <div class="section-head">
-              <div class="section-title">Login Credentials</div>
-              <div class="section-sub">Set your password & role</div>
-            </div>
+      <label>Role</label>
+      <select id="regRole" required>
+        <option value="">-- Select Role --</option>
+        <option value="user">User</option>
+      </select>
 
-            <div class="two-col">
-              <div>
-                <label>Password</label>
-                <input type="password" id="regPassword" required>
-              </div>
-              <div>
-                <label>Confirm Password</label>
-                <input type="password" id="regConfirm" required>
-              </div>
-            </div>
-
-            <label>Role</label>
-            <select id="regRole" required>
-              <option value="">-- Select Role --</option>
-              <option value="user">User</option>
-            </select>
-
-            <div id="adminNote" class="note bad">Admin role requires authorization.</div>
-          </div>
-        </div>
-
+      <div id="adminNote" class="note bad">
+        Admin role requires authorization.
       </div>
 
       <button type="submit" class="btn-primary">Create Account</button>
@@ -131,6 +100,6 @@
     </div>
   </div>
 
-  <script src="assets/js/auth.js?v=2" defer></script>
+  <script src="assets/js/auth.js" defer></script>
 </body>
 </html>
