--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 <body class="centered auth-bg">
 
   <div class="auth-box">
-    <!-- Logos -->
     <div class="logo-row">
       <div class="logo-wrap">
         <img src="assets/images/psa.png" alt="PSA Logo">
@@ -23,13 +22,11 @@
     <h1 class="title">National ID System</h1>
     <p class="subtitle">Secure Login • Powered by Google Sheets</p>
 
-    <!-- Tabs -->
     <div class="tabs">
       <button id="loginTab" class="tab active" type="button">Login</button>
       <button id="registerTab" class="tab" type="button">Register</button>
     </div>
 
-    <!-- LOGIN -->
     <form id="loginForm" class="form">
       <label>Email</label>
       <input type="email" id="loginEmail" placeholder="name@example.gov.ph" required>
@@ -41,7 +38,6 @@
       <p id="loginMsg" class="msg hidden"></p>
     </form>
 
-    <!-- REGISTER -->
     <form id="registerForm" class="form" style="display:none;">
       <label>First Name</label>
       <input type="text" id="regFirstName" required>
@@ -55,14 +51,8 @@
       <label>Email</label>
       <input type="email" id="regEmail" required>
 
-      <label>Viber Number</label>
-      <input
-        id="regViber"
-        type="text"
-        inputmode="numeric"
-        placeholder="09XXXXXXXXX"
-        required
-      >
+      <label for="regViber">Viber Number</label>
+      <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required />
       <div class="hint">Format: 09XXXXXXXXX (11 digits)</div>
 
       <label>Position</label>
@@ -87,9 +77,7 @@
         <option value="user">User</option>
       </select>
 
-      <div id="adminNote" class="note bad">
-        Admin role requires authorization.
-      </div>
+      <div id="adminNote" class="note bad">Admin role requires authorization.</div>
 
       <button type="submit" class="btn-primary">Create Account</button>
       <p id="regMsg" class="msg hidden"></p>
