--- a/public/user.html
+++ b/public/user.html
@@ -515,6 +515,8 @@
     </main>
   </div>
 
-  <script src="assets/js/user.js"></script>
+ <script src="assets/js/user.js?v=5"></script>
+
 </body>
 </html>
+
