--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,8 @@
     </div>
   </div>
 
-  <script src="assets/js/auth.js" defer></script>
+  <script src="assets/js/user.js?v=5" defer></script>
+
 </body>
 </html>
+
