--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,13 @@
       <input type="email" id="regEmail" required>
 
       <label for="regViber">Viber Number</label>
-      <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required />
-      <div class="hint">Format: 09XXXXXXXXX (11 digits)</div>
+      <input
+  id="regViber"
+  type="text"
+  inputmode="numeric"
+  placeholder="09XXXXXXXXX"
+  required
+/>
 
       <label>Position</label>
       <select id="regPosition" required>
@@ -96,3 +101,4 @@
   <script src="assets/js/auth.js" defer></script>
 </body>
 </html>
+
