--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <h1 class="title" style="font-size:12px;">Philippine Statistics Authority</h1>
     <h1 class="title">National ID System</h1>
-    <p class="subtitle">Secure Login • Powered by Node</p>
+    <p class="subtitle">Secure Login</p>
 
     <div class="tabs">
       <button id="loginTab" class="tab active" type="button">Login</button>
@@ -101,4 +101,5 @@
   <script src="assets/js/auth.js" defer></script>
 </body>
 </html>
+
 
