--- a/public/user.html
+++ b/public/user.html
@@ -413,6 +413,11 @@
         </button>
       </nav>
 
+      <button type="button" onclick="location.href='office.html'">
+  Office <small>Personnel</small>
+</button>
+
+
       <div class="logout">
         <a href="index.html">← Logout</a>
       </div>
@@ -520,5 +525,6 @@
 
 </body>
 </html>
+
 
 
