--- a/public/user.html
+++ b/public/user.html
@@ -156,6 +156,11 @@
       background: linear-gradient(90deg, rgba(0,51,160,0.12), rgba(0,86,214,0.10));
       border-color: rgba(0,51,160,0.28);
       color: var(--primary);
+
+      <button type="button" onclick="location.href='office.html'">
+  Office <small>Failed Reg</small>
+</button>
+
     }
     .nav small{
       color: var(--muted);
@@ -525,6 +530,7 @@
 
 </body>
 </html>
+
 
 
 
